--- a/Labs/CharacterCreator/CharacterCreator.Host.Winforms/CharacterCreator.Host.Winforms.csproj
+++ b/Labs/CharacterCreator/CharacterCreator.Host.Winforms/CharacterCreator.Host.Winforms.csproj
@@ -69,6 +69,9 @@
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CharacterForm.resx">
+      <DependentUpon>CharacterForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,6 +84,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\CharacterCreator.Character+Profession.datasource" />
+    <None Include="Properties\DataSources\CharacterCreator.Character.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
