--- a/Labs/CharacterCreator/CharacterCreator.Host.Winforms/CharacterCreator.Host.Winforms.csproj
+++ b/Labs/CharacterCreator/CharacterCreator.Host.Winforms/CharacterCreator.Host.Winforms.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>CharacterCreator.Host.Winforms</RootNamespace>
     <AssemblyName>Character Creator</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -83,9 +84,12 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\CharacterCreator.Character+Profession.datasource" />
     <None Include="Properties\DataSources\CharacterCreator.Character.datasource" />
+    <None Include="Properties\DataSources\CharacterCreator.Host.Winforms.Properties.Resources.datasource" />
+    <None Include="Properties\DataSources\CharacterCreator.Host.Winforms.Properties.Settings.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
