CharacterDatabase and BindList

--- a/Labs/CharacterCreator/CharacterCreator.Host.Winforms/CharacterCreator.Host.Winforms.csproj
+++ b/Labs/CharacterCreator/CharacterCreator.Host.Winforms/CharacterCreator.Host.Winforms.csproj
@@ -88,6 +88,7 @@
     </Compile>
     <None Include="Properties\DataSources\CharacterCreator.Character+Profession.datasource" />
     <None Include="Properties\DataSources\CharacterCreator.Character.datasource" />
+    <None Include="Properties\DataSources\CharacterCreator.CharacterDatabase.datasource" />
     <None Include="Properties\DataSources\CharacterCreator.Host.Winforms.Properties.Resources.datasource" />
     <None Include="Properties\DataSources\CharacterCreator.Host.Winforms.Properties.Settings.datasource" />
     <None Include="Properties\Settings.settings">
