--- a/Labs/CharacterCreator/CharacterCreator/CharacterCreator.csproj
+++ b/Labs/CharacterCreator/CharacterCreator/CharacterCreator.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="CharacterDatabase.cs" />
+    <Compile Include="Profession.cs" />
+    <Compile Include="Race.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
