--- a/Labs/ContactManager.UI/ContactManager/ContactManager.csproj
+++ b/Labs/ContactManager.UI/ContactManager/ContactManager.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,6 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactDatabase.cs" />
+    <Compile Include="SeedDatabase.cs" />
+    <Compile Include="AbstractContactDatabase.cs" />
+    <Compile Include="IContactDatabase.cs" />
+    <Compile Include="ObjectValidator.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
