--- a/Labs/ContactManager.UI/ContactManager/ContactManager.csproj
+++ b/Labs/ContactManager.UI/ContactManager/ContactManager.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContactDatabase.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="SeedDatabase.cs" />
     <Compile Include="AbstractContactDatabase.cs" />
     <Compile Include="IContactDatabase.cs" />
