--- a/Labs/ContactManager.UI/ContactManager.UI/ContactManager.UI.csproj
+++ b/Labs/ContactManager.UI/ContactManager.UI/ContactManager.UI.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessageService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AboutBox.resx">
